2018-08-14  Dirk Eddelbuettel  <edd@debian.org>

	* docker/Dockerfile: Add Dockerfile to create test container

2018-08-13  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Try 20 minute timeout parameter

2018-08-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated to mention renewed Windows support

2018-08-10  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.5

        * configure.ac: Mark as 0.4.5
        * configure: Rebuilt

	* src/Makevars.in: Set CXX_STD=CXX11
	* src/Makevars.win: Idem

2018-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* man/AffineSwaption.Rd: Do not run example as win32 is fragile
	* man/BermudanSwaption.Rd: Idem
	* man/DiscountCurve.Rd: Idem

	* .Rbuildignore: Also ignore .tar.gz

	* inst/include/RQuantLib_RcppExports.h: Updated via
	current Rcpp::compileAttributes() version
	* src/RcppExports.cpp: Idem

2018-04-27  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Rewritten using rwinlib repo for Quantlib library

	* tools/winlibs.R: New helper script to gather libraries from repo

	* DESCRIPTION: Remove 'OS_type: unix'

2018-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/affine.cpp (affineWithRebuiltCurveEngine): Remove
	declaration and assignment of one unused variable
	* src/bermudan.cpp (bermudanFromYieldEngine): Idem
	* src/sabr.cpp (sabrengine): Idem (twice); also rename one
	variable ('todaysDate') to its parameter name ('tradeDate')

2018-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/affine.cpp: Use #include <rquantlib_internal.h>
	* src/asian.cpp: Idem
	* src/barrier_binary.cpp: Idem
	* src/bermudan.cpp: Idem
	* src/bonds.cpp: Idem
	* src/calendars.cpp: Idem
	* src/curves.cpp: Idem
	* src/dates.cpp: Idem
	* src/daycounter.cpp: Idem
	* src/discount.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/implieds.cpp: Idem
	* src/modules.cpp: Idem
	* src/sabr.cpp: Idem
	* src/schedule.cpp: Idem
	* src/utils.cpp: Idem