@@ -1,23 +1,31 @@
 # Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+#
+# Adapted for Docker use via a custom container built for this repo
 
 language: c
 
 sudo: required
 
+services:
+  - docker
+
 dist: trusty
 
 before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # add our launchpad repo which has (inter alia) the newest QuantLib
-  - sudo add-apt-repository -y ppa:edd/misc
-  - ./run.sh bootstrap
-
+#   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+#   # add our launchpad repo which has (inter alia) the newest QuantLib
+#   - sudo add-apt-repository -y ppa:edd/misc
+#   - ./run.sh bootstrap
+ - docker pull eddelbuettel/rquantlib-testing
+ 
 install:
-  - ./run.sh install_aptget r-cran-rcpp libquantlib0-dev r-cran-runit r-cran-rgl r-cran-zoo libboost-dev libboost-test-dev littler r-cran-shiny
-
+#   - ./run.sh install_aptget r-cran-rcpp libquantlib0-dev r-cran-runit r-cran-rgl r-cran-zoo libboost-dev libboost-test-dev littler r-cran-shiny
+ - R CMD BUILD --no-build-vignettes --no-manual .
+ 
 script:
-  #- ./run.sh run_tests
-  - travis_wait 20 ./run.sh run_tests
+#   #- ./run.sh run_tests
+#   - travis_wait 20 ./run.sh run_tests
+ - docker --rm -ti -v $(pwd):/mnt -w /mnt eddelbuettel/rquantlib-testing R CMD check --no-vignettes --no-manual RQuantLib_*.tar.gz
 
 after_failure:
   - ./run.sh dump_logs
